--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,7 @@ JWT_ACCESS_SECRET = amayuru
 JWT_ACCESS_EXPIREIN = 15min
 JWT_REFRESH_TOKEN = amayuru
 JWT_REFRESH_EXPIREIN = 15day
+OPENAI_API_KEY =sk-proj-YMai1fx38op8vraSjjskT3BlbkFJh7S5WP6D5dQ3D19BtYtM
 
+
+GEMINI_API_KEY=AIzaSyBcoNYwhy18Ip3kTEvhXFIeEVfjsazO68Y
